<resources>
    <string name="app_name">EIT app</string>
    <string name="choose_language">Choose language:</string>
    <string name="norsk">Norsk</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="espaniol">Español</string>
    <string name="cont">Continue</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User name:</string>
    <string name="register">Register new user</string>
    <string name="enter_name">Enter name:</string>
    <string name="enter_password">Enter password:</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="mine_aktiviteter">Mine activities</string>
    <string name="registrer_ny_aktivitet">Registrer new activity</string>
    <string name="finn_aktivitet_og_delta">Find activity and participate</string>
    <string name="mine_foresporseler">My requests</string>
    <string name="default_name">Navn Navnesen</string>
    <string name="select_activity_type">Select activity type:</string>
    <string name="select">Select</string>
    <string name="select_location">Select location:</string>
    <string name="select_when">Select when:</string>
    <string name="max_mount_of_participents">Max amount of participents:</string>
    <string name="select_where">Select where:</string>
    <string name="register_activity">Register activity</string>
    <string name="culture">Culture</string>
    <string name="social">Social</string>
    <string name="physical_activity">Physical activity</string>
    <string name="other">Other</string>
    <string name="sport">Sport</string>
    <string name="walk">Walk</string>
    <string name="play">Play</string>
    <string name="trondheim">Trondheim</string>
    <string name="a_example_date">Monday 22.10.18 at 17.30</string>
    <string name="a_example_number_five">5</string>
    <string name="written_description">Written description</string>
    <string name="join_activity">Join activity</string>
    <string name="Min_amount_of_participents">Min amount of participents:</string>
    <string name="num_three">3</string>
    <string name="quick_search_based_upon_interest">Quick search based upon interest</string>
    <string name="find_activity_close_by">Find activity close by</string>
    <string name="advanced_search">Advanced search</string>
    <string name="register_request">Register request</string>
    <string name="find_activity">Find activity</string>
    <string name="example_img">Example_img</string>
    <string name="requests">Requests</string>
    <string name="calender">Calender</string>
    <string name="my_activities">My activities</string>
    <string name="view_chat">View Chat</string>
    <string name="activity_type">Activity type</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="type_here">Type here</string>
    <string name="example_chat_exchange">Ole: Hvor skal vi møtes?</string>
    <string name="activity_list">Activity list</string>
    <string name="example_activity_summery">Walk 22.01 at 17.30</string>
    <string name="requests_close_by">Requests close by</string>
    <string name="current_participents">Current participents</string>
    <string name="num_one">1</string>

</resources>